# dslab-mr

./: .gitignore  Cargo.toml  README.md  map_reduce.yaml
.github/workflows/: docs.yml  main.yaml
crates/distributed_file_system/: Cargo.toml
crates/distributed_file_system/src/: dfs.rs  host_info.rs  lib.rs  network.rs  replication_strategy.rs
crates/distributed_file_system/src/replication_strategies/: mod.rs  random.rs
crates/distributed_file_system/tests/: tests.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: cluster_simulation.rs  compute_host.rs  dag.rs  data_item.rs  experiment.rs  lib.rs  parser.rs  placement_strategy.rs  run_stats.rs  runner.rs  system.rs  trace.rs
crates/runtime/src/placement_strategies/: common.rs  locality_aware.rs  mod.rs  packing_scheduler.rs  random.rs
crates/runtime/tests/: tests.rs
docs/: crates.js  help.html  search-index.js  settings.html  src-files.js
docs/dslab_dfs/: all.html  index.html  sidebar-items.js
docs/dslab_dfs/dfs/: index.html  sidebar-items.js  struct.ChunkAlreadyExists.html  struct.CopiedChunk.html  struct.CopyChunk.html  struct.DistributedFileSystem.html  struct.EraseChunkOnHost.html  struct.NoSuchChunkOnHost.html  struct.NotEnoughSpace.html  struct.RegisterData.html  struct.RegisteredData.html  struct.UnknownHost.html
docs/dslab_dfs/host_info/: index.html  sidebar-items.js  struct.HostInfo.html  type.ChunkId.html  type.DataId.html
docs/dslab_dfs/network/: fn.get_all_racks.html  fn.get_rack.html  fn.make_constant_network.html  fn.make_fat_tree_topology.html  fn.make_shared_network.html  fn.make_tree_topology.html  index.html  sidebar-items.js
docs/dslab_dfs/replication_strategies/: index.html
docs/dslab_dfs/replication_strategy/: index.html  sidebar-items.js  trait.ReplicationStrategy.html
docs/dslab_mr/: all.html  index.html  sidebar-items.js
docs/dslab_mr/cluster_simulation/: enum.InputPlan.html  index.html  sidebar-items.js  struct.ClusterSimulation.html  struct.DagPlan.html  struct.GlobalInputPlan.html  struct.SimulationPlan.html
docs/dslab_mr/compute_host/: index.html  sidebar-items.js  struct.ComputeHost.html
docs/dslab_mr/dag/: index.html  sidebar-items.js  struct.Connection.html  struct.Dag.html  struct.SimpleTask.html  struct.Stage.html  struct.UniformShuffle.html  trait.Shuffle.html  trait.Task.html
docs/dslab_mr/data_item/: enum.DataItem.html  index.html  sidebar-items.js
docs/dslab_mr/experiment/: index.html  sidebar-items.js  struct.Experiment.html  struct.Plan.html  struct.RunResult.html
docs/dslab_mr/parser/: enum.ShuffleType.html  index.html  sidebar-items.js  struct.StageInitialData.html  struct.YamlConnection.html  struct.YamlDag.html  struct.YamlDagPlan.html  struct.YamlSimulationPlan.html  struct.YamlStage.html  struct.YamlStageInputPlan.html  struct.YamlTask.html
docs/dslab_mr/placement_strategies/: index.html  sidebar-items.js
docs/dslab_mr/placement_strategy/: index.html  sidebar-items.js  struct.DynamicTaskPlacement.html  struct.StageActions.html  struct.TaskPlacement.html  trait.DynamicPlacementStrategy.html  trait.PlacementStrategy.html
docs/dslab_mr/run_stats/: index.html  struct.RunStats.html
docs/dslab_mr/runner/: index.html  sidebar-items.js  struct.NewDag.html  struct.Runner.html
docs/dslab_mr/system/: enum.NetworkConfig.html  index.html  sidebar-items.js  struct.HostConfig.html  struct.SystemConfig.html
docs/dslab_mr/trace/: enum.TraceEvent.html  index.html  sidebar-items.js  struct.Trace.html
docs/src/dslab_dfs/: dfs.rs.html  host_info.rs.html  lib.rs.html  network.rs.html  replication_strategy.rs.html
docs/src/dslab_mr/: cluster_simulation.rs.html  compute_host.rs.html  dag.rs.html  data_item.rs.html  experiment.rs.html  lib.rs.html  parser.rs.html  placement_strategy.rs.html  run_stats.rs.html  runner.rs.html  system.rs.html  trace.rs.html
docs/type.impl/std/: primitive.u64.js
examples/benchmark/: Cargo.toml  README.md  system.yaml
examples/benchmark/src/: main.rs
examples/benchmark_2/: README.md
examples/simple/: Cargo.toml  README.md  map_reduce.yaml  plan.yaml  system.yaml  trace.json
examples/simple/src/: main.rs
src/: main.rs
src/distributed_file_system/: dfs.rs  host_info.rs  mod.rs  network.rs  replication_strategy.rs
src/map_reduce/: compute_host_info.rs  data_item.rs  map_reduce_params.rs  mod.rs  placement_strategy.rs  runner.rs
src/runtime/: dag.rs  data_item.rs  mod.rs  placement_strategy.rs  runner.rs
src/spark/: graph.rs  mod.rs  placement_strategy.rs  runner.rs
tools/alibaba_parser/: Cargo.toml  README.md
tools/alibaba_parser/src/: main.rs
tools/run_experiment/: Cargo.toml  README.md  experiment-result.json  experiment.yaml
tools/run_experiment/src/: main.rs
tools/run_experiment/systems/: fat_tree.yaml  tree.yaml
tools/trace_graphs/: Cargo.toml  README.md
tools/trace_graphs/src/: main.rs
(+39 files in other folders)
