[package]
name = "dslab-mr"
version = "0.1.0"
edition = "2021"

[dependencies]
dslab-core = { git = "https://github.com/osukhoroslov/dslab", version = "0.1.0" }
dslab-network = { git = "https://github.com/osukhoroslov/dslab", version = "0.1.0" }
dslab-storage = { git = "https://github.com/osukhoroslov/dslab", version = "0.1.0" }
env_logger = "0.11.2"
log = "0.4.21"
serde = { version = "1.0.197", features = ["derive"] }
serde_yaml = "0.9.34"
