[package]
name = "dslab-dfs"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
dslab-core = { git = "https://github.com/osukhoroslov/dslab", version = "0.1.0" }
dslab-network = { git = "https://github.com/osukhoroslov/dslab", version = "0.1.0" }
log = "0.4.21"
rand = "0.8.5"
rand_pcg = "0.3.1"
serde = { version = "1.0.197", features = ["derive"] }
