[package]
name = "dslab-mr"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
dslab-core = { git = "https://github.com/osukhoroslov/dslab", rev = "59637e355dd2b2927a0da29a430b980fc5c3d3b0", version = "0.1.0" }
dslab-compute = { git = "https://github.com/osukhoroslov/dslab", rev = "59637e355dd2b2927a0da29a430b980fc5c3d3b0", version = "0.1.0" }
dslab-dfs = { version = "0.1.0", path = "../distributed_file_system" }
dslab-network = { git = "https://github.com/osukhoroslov/dslab", rev = "59637e355dd2b2927a0da29a430b980fc5c3d3b0", version = "0.1.0" }
log = "0.4.21"
serde = { version = "1.0.197", features = ["derive"] }
serde_yaml = "0.9.34"
serde_json = "1.0.117"
itertools = "0.12.1"
threadpool = "1.8.1"
rand = "0.8.5"
rand_pcg = "0.3.1"
