[package]
name = "benchmark"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
dslab-dfs = { version = "0.1.0", path = "../../crates/distributed_file_system" }
dslab-mr = { version = "0.1.0", path = "../../crates/runtime" }
env_logger = "0.11.3"
log = "0.4.21"
serde_yaml = "0.9.34"
