[package]
name = "alibaba_parser"
version = "0.1.0"
edition = "2021"

[dependencies]
dslab-mr = { version = "0.1.0", path = "../../crates/runtime" }
clap = { version = "4.5.4", features = ["derive"] }
csv = "1.3.0"
rand = "0.8.5"
rand_pcg = "0.3.1"
serde = { version = "1.0.199", features = ["derive"] }
serde_yaml = "0.9.34"
